# grpo_bt_rm

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.core.txt  requirements.lambda.txt  requirements.txt  setup_lambda.sh
configs/runs/: hh_exp1_graded.env  hh_exp2_graded_hardpair.env  hh_exp3_scoreonly_graded.env  hh_exp4_scoreonly_hardmargin.env  hh_s5v3_T1_NC2_offset_base.env  hh_score100_T20_C10_posclip.env  hh_v3_T5_NC1.1_advfilt_qwen3.env  hh_v3_T5_NC1.1_advfilt_qwen3_lr5e5.env  hh_v3_T5_NC1.1_noscale_base.env  hh_v3_T5_NC1.1_offset_advfilt_base.env  hh_v3_T5_NC1.1_offset_base.env  hh_v3_T5_NC2_offset_base.env  hh_v3_binary_advfilt_base.env  hh_v3_group_floor_b01.env  hh_v3_noscale_T1_b01.env  hh_v3_noscale_T2_b01.env  score100_T10_C6_posclip.env  score100_T20_C10_posclip.env  (+3 more)
patches/: ms-swift-min_reward_std.patch
scripts/: analyze_bt_rm_scores.py  build_sft_data.py  convert_hh_to_rm_format.py  experiment_majority_vote.py  gemini_poll_and_run.sh  gemini_teacher_pilot.py  gpu_watcher.sh  launch_binary_grpo.sh  launch_bt_rm.sh  launch_lambda_experiments.sh  launch_s5v3.sh  run_eval_sweep.sh  run_prompt_sweep.sh  run_variance_multigpu.sh  setup_env.sh  setup_lambda.sh  setup_lambda_remote.sh  teacher_generate.py  test_score_only_baseline.py  test_thinking_variance.py  test_thinking_variance_part2.py  train_grpo.sh  train_sft.sh
tools/: check_dataset.py  compact_explanations.py  explain_prefs.py  merge_variance_shards.py  run_variance_test.sh  summarize_eval_logs.py  verify_gpu_mapping.py  wandb_log_eval_summary.py
(+30 files in other folders)
